--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,216 @@
+@import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Poppins:wght@300&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Poppins:wght@300&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+:root{
+    --primary-color:rgb(33, 150, 243);
+    --font-color:rgb(33, 33, 33);
+    --detail-color:rgb(255, 255, 255);
+    --inactive-color:rgb(117, 117, 117);
+    --background-color-1: rgb(47, 48, 58);
+    --background-color-2: rgb(245, 244, 250);
+    --font-family-1: 'Roboto', sans-serif;
+    --font-family-2: 'Raleway', sans-serif;
+}
 .body{
-    font-family:'Roboto', sans-serif;
+    font-family:var(--font-family-1);
+    color: var(--primary-color);
 }
 
-.buttonNav .buttonLinks{
-    color: rgb(0, 0, 0);
+.main_title{
+    color: var(--primary-color);
+    font-family: var(--font-family-2);
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.17;
+}
+/* .current{
+    color: var(--primary-color); 
+} */
+
+.button_nav .button_links{
+    color: var(--font-color);
     cursor: pointer ;
+    text-decoration: none;
+    font-family: var(--font-family-1);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.17;
 }
 
-.classTitle{
-    background: #2F303A;
-    color: #FFFFFF;
-    justify-content: center;
+.button_nav .button_links:hover{
+    color: var(--primary-color);
+}
+
+.contacts_link{
+    font-family: var(--font-family-1);
+    color: var(--inactive-color);
+    cursor: pointer ;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.17;
+}
+
+.contacts_link:hover{
+    color:var(--primary-color);
+}
+
+.list_contacts, .list_navigation, .list_service, .list_team, .list_footer, .list_images, .list_options, .list_title{
+    list-style: none;
+}
+
+.title{
+    background: var(--background-color-1);
     text-align: center;
-    font-family: 'Roboto', sans-serif;
+    width: 1600px;
+    height: 600px;
+    top: 80px;
 }
 
-.buttonTitle{
-    color: #FFFFFF;
-    background-color: #2196f3;
+.title_text{
+    font-family: var(--font-family-1);
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    color: var(--detail-color);
+}
+
+.button_title{
+    color: var(--detail-color);
+    background-color: var(--primary-color);
     justify-items: center;
-    cursor: pointer;    
+    cursor: pointer;
+    font-family: var(--font-family-1);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
 }
 
-.buttonTitle:hover{
-    background-color: #FFFFFF;
-    color: #2196f3;
+.button_title:hover{
+    background-color: var(--detail-color);
+    color: var(--primary-color);
 } 
 
-.buttonNav .buttonLinks:active{
-    color: #2196f3;
+.service{
+    font-family: var(--font-family-1);
+    font-weight: 700;
+    font-size: 14px;
+    color: var(--font-color);
+    line-height: 1.17;
 }
 
-.imagesTitle{
+.service_description{
+    font-family: var(--font-family-1);
+    font-weight: 400;
+    font-size: 14px;
+    color: var(--inactive-color);
+    line-height: 1.71;
+}
+
+.images_title{
+    font-family: var(--font-family-1);
+    color: var(--font-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
     text-align: center;
+}
+
+.images_what_we_do{
+    width: 370px;
+    height: 294px;
+    top: 1061px;
+}
+
+.team{
+    background-color: var(--background-color-2);
+    width: 1600px;
+    height: 648px;
+    top: 1510px;
+}
+
+.team_title{
+    font-family: var(--font-family-1);
+    color: var(--font-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+}
+
+.team_image{
+    width: 270px;
+    height: 260px;
+    top: 1365px;
+}
+
+.team_name{
+    font-family: var(--font-family-1);
+    color: var(--font-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.17;
+}
+
+.team_job{
+    font-family: var(--font-family-1);
+    color: var(--inactive-color);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.17;
+}
+
+.address_map{
+    font-family: var(--font-family-1);
+    color: var(--detail-color);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    text-decoration: none;
+}
+
+.address_map:hover{
+    color:var(--primary-color);
+}
+
+.footer{
+    background-color: var(--background-color-1);
+}
+
+/* portfolio */
+.list_options{
+}
+
+.main_option{
+    font-family: var(--font-family-1);
+    color: var(--font-color);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.62;
+    text-align: center;
+    background-color: var(--background-color-2);
+    border: none;
+}
+
+.main_option:hover{
+    color: var(--detail-color);
+    background-color: var(--primary-color);
+}
+
+.main_article{
+    font-family: var(--font-family-1);
+    color: var(--font-color);
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 2px;
+}
+
+.article_name{
+    font-family: var(--font-family-1);
+    color: var(--inactive-color);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.87;
 }
