--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Poppins:wght@300&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Poppins:wght@300&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Poppins:wght@300&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Poppins:wght@300&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root{
     --primary-color:rgb(33, 150, 243);
@@ -9,32 +10,39 @@
     --background-color-1: rgb(47, 48, 58);
     --background-color-2: rgb(245, 244, 250);
     --font-family-1: 'Roboto', sans-serif;
-    --font-family-2: 'Raleway', sans-serif;
+    --font-family-2: 'Raleway', sans-serif,'cherry Bomb One';
 }
 .body{
-    font-family:var(--font-family-1);
+    font-family: var(--font-family-1);
+    color: var(--primary-color);
+    font-size:14px;
+    letter-spacing: 0.03em;
+}
+
+.style{
+    list-style: none;
+}
+
+.decoration{
+    text-decoration: none;
+}
+
+.current {
     color: var(--primary-color);
 }
 
 .main_title{
     color: var(--primary-color);
     font-family: var(--font-family-2);
-    text-decoration: none;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.17;
 }
-/* .current{
-    color: var(--primary-color); 
-} */
 
 .button_nav .button_links{
     color: var(--font-color);
     cursor: pointer ;
-    text-decoration: none;
-    font-family: var(--font-family-1);
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.17;
 }
 
@@ -43,21 +51,14 @@
 }
 
 .contacts_link{
-    font-family: var(--font-family-1);
     color: var(--inactive-color);
     cursor: pointer ;
-    text-decoration: none;
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.17;
 }
 
 .contacts_link:hover{
     color:var(--primary-color);
-}
-
-.list_contacts, .list_navigation, .list_service, .list_team, .list_footer, .list_images, .list_options, .list_title{
-    list-style: none;
 }
 
 .title{
@@ -66,7 +67,6 @@
 }
 
 .title_text{
-    font-family: var(--font-family-1);
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -83,6 +83,7 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 1.87;
+    border-radius: 4px;
 }
 
 .button_title:hover{
@@ -91,23 +92,18 @@
 } 
 
 .service{
-    font-family: var(--font-family-1);
     font-weight: 700;
-    font-size: 14px;
     color: var(--font-color);
     line-height: 1.17;
 }
 
 .service_description{
-    font-family: var(--font-family-1);
     font-weight: 400;
-    font-size: 14px;
     color: var(--inactive-color);
     line-height: 1.71;
 }
 
 .images_title{
-    font-family: var(--font-family-1);
     color: var(--font-color);
     font-weight: 700;
     font-size: 36px;
@@ -126,7 +122,6 @@
 }
 
 .team_title{
-    font-family: var(--font-family-1);
     color: var(--font-color);
     font-weight: 700;
     font-size: 36px;
@@ -141,7 +136,6 @@
 }
 
 .team_name{
-    font-family: var(--font-family-1);
     color: var(--font-color);
     font-weight: 500;
     font-size: 16px;
@@ -149,7 +143,6 @@
 }
 
 .team_job{
-    font-family: var(--font-family-1);
     color: var(--inactive-color);
     font-weight: 400;
     font-size: 16px;
@@ -157,12 +150,9 @@
 }
 
 .address_map{
-    font-family: var(--font-family-1);
     color: var(--detail-color);
     font-weight: 400;
-    font-size: 14px;
     line-height: 1.71;
-    text-decoration: none;
 }
 
 .address_map:hover{
@@ -184,6 +174,7 @@
     text-align: center;
     background-color: var(--background-color-2);
     border: none;
+    border-radius: 4px;
 }
 
 .main_option:hover{
@@ -192,7 +183,6 @@
 }
 
 .main_article{
-    font-family: var(--font-family-1);
     color: var(--font-color);
     font-size: 18px;
     font-weight: 700;
@@ -200,7 +190,6 @@
 }
 
 .article_name{
-    font-family: var(--font-family-1);
     color: var(--inactive-color);
     font-weight: 400;
     font-size: 16px;
